
// This is a copy of the canary_views_api_service.proto file found in Canary.Views.Grpc.Api.dll

syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";

option csharp_namespace = "Canary.Views.Grpc.Api";
package canary.views.grpc.api;

import "Utility.ProtobufSharedTypes/Protos/grpc_tvq.proto";
import "Utility.ProtobufSharedTypes/Protos/variant.proto";
import "Calculations.Grpc.Common/Protos/canary_calculations_common.proto";
import "Views.Grpc.Common/Protos/canary_views_common.proto";

service CanaryViewsApiService {
  rpc Test (google.protobuf.Empty) returns (google.protobuf.Empty);

  rpc GetWebServiceVersion (google.protobuf.Empty) returns (GetWebServiceVersionResponse);
  rpc GetWebServiceInterfaceVersion (google.protobuf.Empty) returns (GetWebServiceInterfaceVersionResponse);
  rpc GetClientConnectionId (GetClientConnectionIdRequest) returns (GetClientConnectionIdResponse);
  rpc ReleaseClientConnectionId (ReleaseClientConnectionIdRequest) returns (ReleaseClientConnectionIdResponse);
  rpc KeepaliveClientConnectionId (KeepaliveClientConnectionIdRequest) returns (KeepaliveClientConnectionIdResponse);
  rpc SetVirtualTimeExtensionFlag (SetVirtualTimeExtensionFlagRequest) returns (SetVirtualTimeExtensionFlagResponse);
  rpc GetViews (GetViewsRequest) returns (GetViewsResponse);
  rpc GetDatasetInfo (GetDatasetInfoRequest) returns (GetDatasetInfoResponse);
  rpc GetDataSetList (GetDataSetListRequest) returns (GetDataSetListResponse);
  rpc GetTagList (GetTagListRequest) returns (GetTagListResponse);
  rpc GetTagInfo (GetTagInfoRequest) returns (GetTagInfoResponse);
  rpc GetTagDataContext (GetTagDataContextRequest) returns (GetTagDataContextResponse);
  rpc GetTagCurrentValue (GetTagCurrentValueRequest) returns (GetTagCurrentValueResponse);
  
  rpc GetAnnotations (GetAnnotationsRequest) returns (GetAnnotationsResponse);

  rpc GetViewInfo (GetViewInfoRequest) returns (GetViewInfoResponse);

  rpc GetViewInfoSingle (GetViewInfoSingleRequest) returns (GetViewInfoSingleResponse);

  rpc GetRawData (GetRawDataRequest) returns (GetRawDataResponse);
  rpc GetAggregateData(GetAggregateDataRequest) returns (GetAggregateDataResponse);
  rpc GetTagStatistics (GetTagStatisticsRequest) returns (GetTagStatisticsResponse);
  rpc GetReadableQuality (GetReadableQualityRequest) returns (GetReadableQualityResponse);
  rpc GetAggregateList (google.protobuf.Empty) returns (GetAggregateListResponse);
    
  rpc SubscribeToLiveData (SubscribeToLiveDataRequest) returns (stream SubscribeToLiveDataResponse);

  rpc StoreHistoryData (StoreHistoryDataRequest) returns (StoreHistoryDataResponse);
  rpc StoreAnnotation (StoreAnnotationRequest) returns (StoreAnnotationResponse);
  rpc AxiomInternal (AxiomInternalRequest) returns (AxiomInternalResponse);
  rpc Browse (BrowseRequest) returns (BrowseResponse);
  rpc BrowseAutoComplete (BrowseAutoCompleteRequest) returns (BrowseAutoCompleteResponse);
  rpc BrowseTags (BrowseTagsRequest) returns (BrowseTagsResponse);
  rpc SearchTags (SearchTagsRequest) returns (SearchTagsResponse);
  rpc BrowsePath (BrowsePathRequest) returns (BrowsePathResponse);
  
  rpc GetModelViews (google.protobuf.Empty) returns (GetModelViewsResponse);
  rpc GetModelTypes (GetModelTypesRequest) returns (GetModelTypesResponse);
  rpc GetModelTypeTags (GetModelTypeTagsRequest) returns (GetModelTypeTagsResponse);
  rpc GetModelInstances (GetModelInstancesRequest) returns (GetModelInstancesResponse);

  rpc FindEvents (FindEventsRequest) returns (FindEventsResponse);
  rpc GetEventCalculationNames (GetEventCalculationNamesRequest) returns (GetEventCalculationNamesResponse);
  rpc GetEventPropertyNames (GetEventPropertyNamesRequest) returns (GetEventPropertyNamesResponse);
  rpc SearchForEvents (SearchForEventsRequest) returns (SearchForEventsResponse);

  rpc GetIdentityEndpoints (GetIdentityEndpointsRequest) returns (GetIdentityEndpointsResponse);

  rpc ParseTimestamp (ParseTimestampRequest) returns (ParseTimestampResponse);
  rpc ParseInterval (ParseIntervalRequest) returns (ParseIntervalResponse);

  rpc TestMSSQLExternalPropertiesConnection (TestMSSQLExternalPropertiesConnectionRequest) returns (TestMSSQLExternalPropertiesConnectionResponse);
}

message GetWebServiceVersionResponse {
  canary.views.grpc.common.ApiCallStatus status = 1;
  string version = 2;
}

message GetWebServiceInterfaceVersionResponse {
  canary.views.grpc.common.ApiCallStatus status = 1;
  string version = 2;
}

message GetClientConnectionIdRequest {
  string app = 1;
  string user_id = 2;
}

message GetClientConnectionIdResponse {
  canary.views.grpc.common.ApiCallStatus status = 1;
  int32 cci = 2;
}

message ReleaseClientConnectionIdRequest {
  int32 cci = 1;
}

message ReleaseClientConnectionIdResponse {
  canary.views.grpc.common.ApiCallStatus status = 1;
}

message KeepaliveClientConnectionIdRequest {
  int32 cci = 1;
}

message KeepaliveClientConnectionIdResponse {
  canary.views.grpc.common.ApiCallStatus status = 1;
}

message SetVirtualTimeExtensionFlagRequest {
  bool flag = 1;
  int32 cci = 2;
}

message SetVirtualTimeExtensionFlagResponse {
  canary.views.grpc.common.ApiCallStatus status = 1;
}

message GetViewsRequest {
  int32 cci = 1;
}

message GetViewsResponse {
  canary.views.grpc.common.ApiCallStatus status = 1;
  repeated string views = 2;
}

message GetDatasetInfoResponse {
  enum Status {
    UNSPECIFIED = 0;
    VIEW_NOT_FOUND = 1;
    VIEWS_ERROR = 2;
    ACCESS_DENIED = 3;
  }
  canary.views.grpc.common.ApiCallStatus status = 1;
  Status extended_status = 2;
  repeated string prop_name = 3;
  repeated string prop_value = 4;
}

message GetDatasetInfoRequest {
  string view = 1;
  string dataset_name = 2;
  int32 cci = 3;
}


message GetDataSetListRequest {
  string view = 1;
  bool include_hidden = 2;
  int32 cci = 3;
}

message GetDataSetListResponse {
  enum Status {
    UNSPECIFIED = 0;
    VIEW_NOT_FOUND = 1;
    PLUGIN_ERROR = 2;
  }
  canary.views.grpc.common.ApiCallStatus status = 1;
  Status extended_status = 2;
  repeated string datasets = 3;
}

message GetTagListRequest {
  string view = 1;
  string dataset_name = 2;
  int32 starting_offset = 3;
  int32 max_count = 4;
  int32 cci = 5;
}

message GetTagListResponse {
  enum Status {
    UNSPECIFIED = 0;
    VIEW_NOT_FOUND = 1;
    PLUGIN_TAG_LIST_ERROR = 2;
  }
  canary.views.grpc.common.ApiCallStatus status = 1;
  Status extended_status = 2;
  int32 result_flags = 3;
  repeated string tag_names = 4;
  repeated int32 tag_types = 5;
  int32 starting_offset = 6;
}

message GetTagInfoRequest {
  string view = 1;
  repeated string tag_names = 2;
  int32 cci = 3;
}

message GetTagInfoResponse {
  enum Status {
    UNSPECIFIED = 0;
    VIEW_NOT_FOUND = 1;
  }		
  canary.views.grpc.common.ApiCallStatus status = 1;
  Status extended_status = 2;
  repeated TagInfo tag_infos = 3;
}

message TagInfo {
  string tag_item_id = 1;
    int32 item_type = 2;
    uint32 flags = 3;
    repeated TagProp tag_properties = 4;
}

message TagProp {
  string prop_name = 1;
  int32 prop_index = 2;
  string prop_description = 3;
  string prop_value = 4;
  string data_type = 5;
}

message GetTagDataContextRequest {
  string view = 1;
  repeated string tag_names = 2;
  int32 cci = 3;
}

message GetTagDataContextResponse {
  enum Status {
    UNSPECIFIED = 0;
    VIEW_NOT_FOUND = 1;
  }
  canary.views.grpc.common.ApiCallStatus status = 1;
  Status extended_status = 2;
  repeated TagDataContext contexts = 3;
}

message TagDataContext {
  string tag_item_id = 1;
  google.protobuf.Timestamp oldest_timestamp = 2;
  google.protobuf.Timestamp latest_timestamp = 3;
  string latest_value_data_type = 4;
  string latest_value = 5;
  uint32 latest_quailty = 6;
}

message GetTagCurrentValueRequest {
  enum Quality {
    ANY = 0;
    NON_BAD = 1;
    GOOD = 2;
  }
  string view = 1;
  repeated string tag_names = 2;
  google.protobuf.BoolValue use_time_extension = 3;
  Quality quality = 4;
  int32 cci = 5;
}

message GetTagCurrentValueResponse {
  enum Status {
    UNSPECIFIED = 0;
    VIEW_NOT_FOUND = 1;
  }
  canary.views.grpc.common.ApiCallStatus status = 1;
  Status extended_status = 2;
  repeated TagCurrentValue tag_values = 3;
}

message TagCurrentValue {
  string tag_item_id = 1;
  google.protobuf.Timestamp timestamp = 2;
  canary.utility.protobuf_shared_types.Variant value = 3;
  int32 quality = 4;
}

message GetRawDataRequest {
  string view = 1;
  repeated RawTagRequest requests = 2;
  int32 max_count_per_tag = 3;
  bool return_bounds = 4;
  bool return_annotations = 5;
  int32 cci = 6;
}

message RawTagRequest {
  string tag_name = 1;
  google.protobuf.Timestamp start_time = 2;
  google.protobuf.Timestamp end_time = 3;
  int32 client_data = 4;
  bytes continuation_point = 5;
}

message GetRawDataResponse {
  enum Status {
    UNSPECIFIED = 0;
    NO_TAGS_IN_REQUEST = 1;
    VIEW_NOT_FOUND = 2;
    TOO_MANY_TAGS = 3;
  }
  canary.views.grpc.common.ApiCallStatus status = 1;
  Status extended_status = 2;
  int32 server_limitation_count = 3;
  repeated RawTagData raw_data = 4;
}

message RawTagData {
  string tag_name = 1;
  int32 client_data = 2;
  int32 result_flags = 3;
  string error_message = 4;
  int32 error_code = 5;
  repeated canary.utility.protobuf_shared_types.GrpcTvq tvqs = 6;
  repeated Annotation annotations = 7;
  bytes continuation_point = 8;
}

message Annotation {
  google.protobuf.Timestamp timestamp = 1;
  bool is_deleted = 2;
  repeated AnnotationEntry entries = 3;
}

message AnnotationTag{
  string tag_id = 1;
  google.protobuf.Timestamp timestamp = 2;
  repeated AnnotationEntry entries = 3;
}

message AnnotationEntry {
  google.protobuf.Timestamp entry_time = 1;
  string user = 2;
  string message = 3;
}

message GetAnnotationsRequest{
  string server = 1;
  repeated string tag_ids = 2;
  google.protobuf.Timestamp start_time = 3;
  google.protobuf.Timestamp end_time = 4;
}

message GetAnnotationsResponse{
  enum Status {
    UNSPECIFIED = 0;
    VIEW_NOT_FOUND = 1;
  }
  canary.views.grpc.common.ApiCallStatus status = 1;
  Status extended_status = 2;
  repeated AnnotationTag annotations = 3;
}

message GetAggregateDataRequest {
  string view = 1;
  repeated AggregateTagRequest requests = 2;
  google.protobuf.Timestamp start_time = 3;
  google.protobuf.Timestamp end_time = 4;
  google.protobuf.Duration interval = 5;
  bool return_annotations = 6;
  int32 cci = 7;
}

message AggregateTagRequest {
  string tag_name = 1;
  string aggregate_name = 2;
  AggregateConfiguration aggregate_configuration = 3;
  bool sloped = 4;
  int32 client_data = 5;
}

message AggregateConfiguration {
  bool treat_uncertain_as_bad = 1;
  int32 percent_data_bad = 2;
  int32 percent_data_good = 3;
  bool use_sloped_extrapolation = 4;
}

message GetAggregateDataResponse {
  enum Status {
    UNSPECIFIED = 0;
    NO_TAGS_IN_REQUEST = 1;
    VIEW_NOT_FOUND = 2;
    TOO_MANY_TAGS = 3;
    TOO_MANY_VALUES = 4;
  }
  canary.views.grpc.common.ApiCallStatus status = 1;
  Status extended_status = 2;
  int32 server_limitation_count = 3;
  repeated AggregateTagData aggregated_data = 4;
}

message AggregateTagData {
  string tag_name = 1;
  int32 client_data = 2;
  string error_message = 3;
  int32 error_code = 4;
  repeated canary.utility.protobuf_shared_types.GrpcTvq tvqs = 5;
  repeated Annotation annotations = 6;
}

message GetReadableQualityRequest {
  google.protobuf.Int32Value quality = 1;
}

message GetReadableQualityResponse {
  canary.views.grpc.common.ApiCallStatus status = 1;
  string readable_quality = 2;
}

message GetTagStatisticsRequest {
  string view_name = 1;
  string tag_id = 2;
  google.protobuf.Timestamp start_time = 3;
  google.protobuf.Timestamp end_time = 4;
  google.protobuf.Duration interval = 5;
  string aggregate_name = 6;
  bool include_std_dev = 7;
  bool include_percentiles = 8;
  int32 cci = 9;
}

message GetTagStatisticsResponse {
  enum Status {
    UNSPECIFIED = 0;
    VIEW_NOT_FOUND = 1;
  }
  canary.views.grpc.common.ApiCallStatus status = 1;
  Status extended_status = 2;
    int32 total_samples = 3;
    int32 valid_samples = 4;
    double sum = 5;
    double mean = 6;
    double minimum = 7;
    double maximum = 8;
    double standard_dev = 9;
    double percent_25 = 10;
    double percent_50 = 11;
    double percent_75 = 12;
}

message GetAggregateListResponse {
  canary.views.grpc.common.ApiCallStatus status = 1;
  repeated AggregateDefinition aggregates = 2;
}

message AggregateDefinition {
  string aggregate_name = 1;
  string aggregate_description = 2;
}

message SubscribeToLiveDataRequest {
  int32 cci = 1;
  // list of views paths to browse for tags and then subscribe
  repeated SubscriptionBrowsePath browse_paths = 2;
  // list of tags that include the view to subscribe to
  repeated string tags = 3;
  // if true, only the latest value from the historian is returned. this is more efficient, but could miss values in the middle of the reporting interval
  bool is_lastest_value_only = 4;
  // if true, then values are virtually time extended during each reporting interval call, regardless of whether the values or timestamp changed
  bool is_virtual_time_extension_enabled = 5;
  // if false and the service has compression enabled, disables compression for returned values (may be faster)
  bool is_compression_enabled = 6;
  // if true, annotations are returned along with the tvq values
  bool is_annotations_enabled = 7;
  // if true, aliases are returned on the first message sent and subsequent messages use the aliases for smaller payloads
  bool is_tag_aliasing_enabled = 8;
  // interval at which you'd like data returned
  google.protobuf.Duration reporting_interval = 9;
}

message SubscribeToLiveDataResponse {
  enum Status {
    UNSPECIFIED = 0;
    NO_TAGS_IN_REQUEST = 1;
    RETRIEVAL_ERROR = 2;
  }
  canary.views.grpc.common.ApiCallStatus status = 1;
  Status extended_status = 2;
  // map of browse path and error for browse paths that return an error
  map<string, string> browse_errors = 3;
  // map of tags and errors for tags that don't succeed
  map<string, string> tag_errors = 4;
  // map of tag name to aliases if SubscribeToLiveDataRequest.isTagAliasingEnabled == true. only specified on first message. otherwise empty
  map<string, int32> tag_aliases = 5;
  // map of tag names and their values (if SubscribeToLiveDataRequest.isTagAliasingEnabled == false). otherwise empty
  map<string, TvqsAndAnnotations> tags_and_data = 6;
  // map of tag aliases and their values (if SubscribeToLiveDataRequest.isTagAliasingEnabled == true). otherwise empty
  map<int32, TvqsAndAnnotations> aliases_and_data = 7;
}

message SubscriptionBrowsePath {
  string browse_path = 1;
  bool deep = 2;
}

message TvqsAndAnnotations {
  repeated canary.utility.protobuf_shared_types.GrpcTvq tvqs = 3;
  repeated Annotation annotations = 4;
}

message StoreHistoryDataRequest {
  string view_name = 1;
  repeated StoreDataRequest requests = 2;
  int32 cci = 3;
}

message StoreDataRequest {
  string data_set = 1;
  string tag_name = 2;
  int32 client_data = 3;
  bool create_if_tag_not_found = 4;
  google.protobuf.Timestamp common_property_timestamp = 5;
  map<string, canary.utility.protobuf_shared_types.Variant> properties = 6;
  bool handle_out_of_order_data = 7;
  repeated canary.utility.protobuf_shared_types.GrpcTvq tvqs = 8;
  string who_is_changing_data = 9;
  string reason_for_the_data_change = 10;
  google.protobuf.Timestamp delete_all_tvqs_from = 11;
  google.protobuf.Timestamp delete_all_tvqs_up_to = 12;
}

message StoreHistoryDataResponse {
  enum Status {
    UNSPECIFIED = 0;
    VIEW_NOT_FOUND = 1;
    INVALID_VIEW_TYPE = 2;
  }
  canary.views.grpc.common.ApiCallStatus status = 1;
  Status extended_status = 2;
  repeated StoreDataResult results = 3;
}

message StoreDataResult {
  int32 client_data = 1;
  string error_message = 2;
}

message StoreAnnotationRequest {
  string view_name = 1;
  int32 cci = 2;
  StoreAnnotationRequestItem annotation = 3;
}

message StoreAnnotationRequestItem {
  string tag_prefix = 1;
  string tag_name = 2;
  google.protobuf.Timestamp annotation_time_stamp = 3;
  string annotation_message = 4;
  google.protobuf.Timestamp created_at = 5;
  string user_id = 6;
  bool visible = 7;
}

message StoreAnnotationResponse {
  enum Status {
    UNSPECIFIED = 0;
    VIEW_NOT_FOUND = 1;
    FAILED_TO_STORE_ANNOTATION = 2;
  }
  canary.views.grpc.common.ApiCallStatus status = 1;
  Status extended_status = 2;
}

message AxiomInternalRequest {
  bytes request = 1;
  int32 cci = 2;
}

message AxiomInternalResponse {
  bytes response = 1;
}

message BrowseRequest {
  string node_id_path = 1;
  bool force_reload = 2;
}

message BrowseResponse {
  canary.views.grpc.common.ApiCallStatus status = 1;
  BrowseNode node = 2;
}

message BrowseNode {
  string error_message = 1;
  string parent_id_path = 2;
  repeated BrowseInfo children = 3;
}

message BrowseInfo {
  string id_path = 1;
  string text = 2;
  string icon_name = 3;
  int32 num_children = 4;
  int32 num_tags = 5;
}

message BrowseAutoCompleteRequest {
  string node_id_path = 1;
  string clue = 2;
}

message BrowseAutoCompleteResponse {
  canary.views.grpc.common.ApiCallStatus status = 1;
  string error_message = 2;
  string node_id_path = 3;  // of where options are from
  repeated string options = 4;
}

message BrowseTagsRequest {
  string node_id_browse = 1;
  string search_context = 2;
  int32 max_count = 3;
  bool include_sub_nodes = 4;
  bool include_properties = 5;
}

message BrowseTagsResponse {
  canary.views.grpc.common.ApiCallStatus status = 1;
  repeated string tag_names = 2;
  bool more_data_available = 3;
  string search_context = 4;
}

message SearchTagsRequest {
  repeated string tag_and = 1;
  repeated string tag_or = 2;
  repeated string description_and = 3;
  repeated string description_or = 4;
  repeated string eng_units_and = 5;
  repeated string eng_units_or = 6;
  bool include_properties = 7;
}

message SearchTagsResponse {
  canary.views.grpc.common.ApiCallStatus status = 1;
  repeated SearchTags search = 2;
}

message SearchTags {
  string tag_name = 1;
  repeated SearchTagProperty  properties = 2;
  message SearchTagProperty {
    string property_name = 1;
    canary.utility.protobuf_shared_types.Variant property_value = 2;
  }
}

message BrowsePathRequest {
  repeated string tree_path = 1;
}

message BrowsePathResponse {
  canary.views.grpc.common.ApiCallStatus status = 1;
  repeated BrowseNode nodes = 2;
}

message GetModelViewsResponse {
  canary.views.grpc.common.ApiCallStatus status = 1;
  repeated string views = 2;
}

message GetModelTypesRequest {
  string asset_view = 1;
  string parent_type = 2;
}

message GetModelTypesResponse {
  enum Status {
    UNSPECIFIED = 0;
    MODEL_PLUGIN_UNAVAILABLE = 1;
    VIEW_NOT_FOUND = 2;
    NON_MODEL_VIEW = 3;
  }
  canary.views.grpc.common.ApiCallStatus status = 1;
  Status extended_status = 2;
  repeated string model_types = 3;
}

message GetModelTypeTagsRequest {
  string asset_view = 1;
  string asset_type = 2;
  bool include_sub_nodes = 3;
}

message GetModelTypeTagsResponse {
  enum Status {
    UNSPECIFIED = 0;
    MODEL_PLUGIN_UNAVAILABLE = 1;
    VIEW_NOT_FOUND = 2;
    NON_MODEL_VIEW = 3;
    GET_INSTANCES_FAILED = 4;
    BROWSE_INSTANCE_TAGS_FAILED = 5;
  }
  canary.views.grpc.common.ApiCallStatus status = 1;
  Status extended_status = 2;
  repeated string tags = 3;
}

message GetModelInstancesRequest {
  string asset_view = 1;
  string parent_node_path_id = 2;
  string asset_type = 3;
  string filter_expression = 4;
}

message GetModelInstancesResponse {
  enum Status {
    UNSPECIFIED = 0;
    MODEL_PLUGIN_UNAVAILABLE = 1;
    VIEW_NOT_FOUND = 2;
    NON_MODEL_VIEW = 3;
    ASSET_TYPE_NOT_FOUND = 4;
  }
  canary.views.grpc.common.ApiCallStatus status = 1;
  Status extended_status = 2;
  repeated string instances = 3;
}

message FindEventsRequest {
  map<string, string> search_criteria = 1;
  bytes continuation_point = 2;
}

message FindEventsResponse {
  enum Status {
    UNSPECIFIED = 0;
    CALCULATIONS_REQUEST_FAILED = 1;
  }
  canary.views.grpc.common.ApiCallStatus status = 1;
  Status extended_status = 2;
  repeated canary.calculations.grpc.common.Event events = 3;
  bytes continuation_point = 4;
}

message GetEventCalculationNamesRequest {
  // empty
}

message GetEventCalculationNamesResponse {
  enum Status {
    UNSPECIFIED = 0;
    CALCULATIONS_REQUEST_FAILED = 1;
  }
  canary.views.grpc.common.ApiCallStatus status = 1;
  Status extended_status = 2;
  repeated string event_calculation_names = 3;
}

message GetEventPropertyNamesRequest {
  // empty
}

message GetEventPropertyNamesResponse {
  enum Status {
    UNSPECIFIED = 0;
    CALCULATIONS_REQUEST_FAILED = 1;
  }
  canary.views.grpc.common.ApiCallStatus status = 1;
  Status extended_status = 2;
  repeated string event_property_names = 3;
}

message SearchForEventsRequest {
  int32 cci = 1;
  string view_name = 2;
  string tag_prefix = 3;
  string asset_type = 4;
  google.protobuf.Timestamp search_from = 5;
  google.protobuf.Timestamp search_to = 6;
  string start_trigger_expression = 7;
  string end_trigger_expression = 8;
  google.protobuf.Duration min_event_duration = 9;
  int32 max_number_of_events = 10;
  repeated string event_properties = 11;
  bytes continuation_point = 12;
}

message SearchForEventsResponse {
  enum Status {
    UNSPECIFIED = 0;
    UNHANDLED_EXCEPTION = 1;
    VIEWS_ERROR = 2;
  }
  canary.views.grpc.common.ApiCallStatus status = 1;
  Status extended_status = 2;
  bool is_done = 3;
  double percent_complete = 4;
  repeated AdHocEvent events = 5;
  bytes continuation_point = 6;
  int32 number_of_slices = 7;
  int32 number_of_n_calc_evaluations = 8;
  google.protobuf.Duration elapsed_time = 9;
  int32 number_of_instances = 10;
  int32 current_instance = 11;
}

message AdHocEvent {
  string source = 1;
  google.protobuf.Timestamp starts_at = 2;
  google.protobuf.Timestamp ends_at = 3;
  repeated AdHocEventProperty properties = 4;

  message AdHocEventProperty {
    string property_name = 1;
    canary.utility.protobuf_shared_types.Variant property_value = 2;
  }
}

message GetViewInfoRequest {
  // empty
}

message GetViewInfoResponse {
  enum Status {
    UNSPECIFIED = 0;
    RETRIEVING_VIEW_PROPERTIES = 1;
  }
  canary.views.grpc.common.ApiCallStatus status = 1;
  Status extended_status = 2;
  repeated ViewInfo views = 3;
}

message GetViewInfoSingleRequest {
    string view_name = 1;
}

message GetViewInfoSingleResponse {
    enum Status {
        UNSPECIFIED = 0;
        RETRIEVING_VIEW_PROPERTIES = 1;
        VIEW_NOT_FOUND = 2;
    }
    canary.views.grpc.common.ApiCallStatus status = 1;
    Status extended_status = 2;
    ViewInfo view = 3;
}

message ViewInfo {
  string view_name = 1;
  string view_type = 2;
  repeated string prop_name = 3;
  repeated string prop_value = 4;
}

message GetIdentityEndpointsRequest {
    // empty
}

message GetIdentityEndpointsResponse {
  canary.views.grpc.common.ApiCallStatus status = 1;
  string identity_endpoint_api = 3;
  string identity_endpoint_oidc = 4;
}

message ParseTimestampRequest {
  string timestamp = 1;
  optional string time_zone_id = 2;
}

message ParseTimestampResponse {
  enum Status {
    UNSPECIFIED = 0;
    PARSE_FAILED = 1;
  }
  canary.views.grpc.common.ApiCallStatus status = 1;
  Status extended_status = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message ParseIntervalRequest {
  string interval = 1;
  optional string time_zone_id = 2;
}

message ParseIntervalResponse {
  enum Status {
    UNSPECIFIED = 0;
    PARSE_FAILED = 1;
  }
  canary.views.grpc.common.ApiCallStatus status = 1;
  Status extended_status = 2;
  google.protobuf.Duration interval = 3;
}

message TestMSSQLExternalPropertiesConnectionRequest{
    string server = 1;
    string database = 2;
    string credentials = 3;
}

message TestMSSQLExternalPropertiesConnectionResponse{
    bool success = 2;
}